--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-custom-scroll": "^7.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-scrollbars-custom": "^4.1.1"
+    "react-scrollbars-custom": "^4.1.1",
+    "tw-elements-react": "^1.0.0-alpha-end"
   },
   "devDependencies": {
     "@types/node": "^20",
